# AWSServices

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  setup.cfg  start.sh
aws_services/: Roles_Screens.md  manage.py  todo.txt
aws_services/aws_services/: asgi.py  settings.py  urls.py  wsgi.py
aws_services/ec2_services/: apps.py
aws_services/init_service/: admin.py  apps.py  models.py  url.py  views.py
aws_services/init_service/migrations/: 0001_initial.py  0002_alter_role_role_name.py
aws_services/lambda_services/: apps.py
aws_services/s3_services/: apps.py
aws_services/utils/: constants.py
aws_services/utils/DRF_Classes/: custom_authentication_classes.py
aws_services/utils/authenticate/: authentication.py
aws_services/utils/jsonvalidator/: json_validator.py
aws_services/utils/jsonvalidator/schemas/init_services/: login.json  sign_up.json  update-user.json
aws_services/utils/models/: abstract_model.py
aws_services/utils/serializers/: init_service_serializer.py
frontend-view/: package-lock.json  package.json  vite.config.js
frontend-view/src/: App.vue
frontend-view/src/plugins/: router.js
frontend-view/src/views/: Boilerplate.vue  Home.vue
